prevent out of bounds

--- a/src/game/Board.css
+++ b/src/game/Board.css
@@ -6,17 +6,29 @@
 .spot {
     margin: 2px;
     padding: 3px 7px;
-    border: 1px solid #083;
+    border: 1px solid #888;
     background-color: #ccc;
     cursor: default;
 }
 
 .spot:hover {
-    padding: 2px 6px;
-    border: 2px solid #2B6;
-    background-color: #fff;
+    padding: 1px 5px;
+    border: 3px solid black;
+    /*background-color: #fff;*/
 }
 
 .active {
-    color: red;
+    color: #c33;
+    padding: 2px 6px;
+    border: 2px solid #c33;
 }
+
+.Human {
+    background-color: #de6;
+}
+
+.Compy {
+    background-color: #9cf;
+}
+
+.Nobody {}
